// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`integration:constructs/delimiter > should tokenize delimiter (0) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "delimiter",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 1,
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 0,
        "column": 1,
        "line": 1,
        "offset": 0,
      },
      "type": "delimiter",
    },
  ],
]
`;

exports[`integration:constructs/delimiter > should tokenize delimiter (1) 1`] = `
[
  [
    "enter",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "delimiter",
    },
  ],
  [
    "exit",
    {
      "end": {
        "_bufferIndex": -1,
        "_index": 5,
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "start": {
        "_bufferIndex": 0,
        "_index": 4,
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "type": "delimiter",
    },
  ],
]
`;
